--- a/web-general/templates/layout_footer.html
+++ b/web-general/templates/layout_footer.html
@@ -5,7 +5,7 @@
             <div class="col-md-12">
                 <div class="copyright">
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    <p><a href="https://www.nexvisionlab.com">NEXVISIONLAB.</a> All right reserved.</p>
+                    <p><a href="https://www.alirezagharib.ir">Gharib.</a> All right reserved.</p>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 </div>
             </div>
@@ -59,7 +59,7 @@
         });
 
         var client = elasticsearch.Client({
-            host: 'darknyx.com:443'
+            host: 'mydomain.domain:443'
         });
         var query = {
             "bool": {
